--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nestjs/typeorm": "^7.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "factory.ts": "^0.5.1",
+    "faker": "^5.1.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -43,7 +45,7 @@
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
+    "@nestjs/testing": "^7.4.4",
     "@types/express": "^4.17.3",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
@@ -68,7 +70,14 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "modulePaths": [
+      "."
+    ],
+    "moduleDirectories": [
+      "src",
+      "node_modules"
+    ],
+    "rootDir": ".",
     "testRegex": ".spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
